# Drone-Simulation

./: README.md
darpa_sim/: ee478_submit_example.launch  ee478_submit_example_tmuxp.yaml  ee478_visualization.rviz  install_darp_sim_dependencies.sh
darpa_sim/drone_offboard/: CMakeLists.txt  README.md  package.xml
darpa_sim/drone_offboard/script/: offboard_node_py.py  waypoint_mission.py
darpa_sim/drone_offboard/src/: offboard_node.cpp
darpa_sim/fake_localization/: CMakeLists.txt  ground_truth_republisher.py  tf_broadcaster.py
darpa_sim/scout_description/: CMakeLists.txt  package.xml
darpa_sim/scout_description/config/: scout_sensors.yaml
darpa_sim/scout_description/launch/: description.launch  test.launch
darpa_sim/scout_description/meshes/: frame_bottom.stl  frame_upper.stl
darpa_sim/scout_description/urdf/: hokuyo.urdf.xacro  scout.xacro  scout_base.xacro  scout_frame.xacro  scout_with_rs.xacro  scout_with_sensor.xacro
darpa_sim/scout_description/urdf/rotors/: multirotor_base.xacro
darpa_sim/simulation_drone/: CMakeLists.txt  package.xml
darpa_sim/simulation_drone/launch/: ee478_darpa.launch  empty_world.launch  map.launch  spawn_drone.launch
darpa_sim/simulation_drone/models/AIGC_drone_2/: AIGC_drone.stl  drone.sdf  drone.stl  model.config
darpa_sim/simulation_drone/models/AIGC_drone_3/: drone.sdf  model.config
darpa_sim/simulation_drone/models/AIGC_drone_4/: drone.sdf  model.config
darpa_sim/simulation_drone/models/hokuyo_subt/: model.sdf
darpa_sim/simulation_drone/models/teraranger/: model.config  model.sdf
darpa_sim/simulation_drone/models/velodyne_simulator/velodyne_gazebo_plugins/src/: GazeboRosVelodyneLaser.cpp
darpa_sim/simulation_drone/worlds/: AIGC_2019_3.world  AIGC_2020_3.world  AIGC_2020_KI.world  AIGC_2020_small.world  AIGC_2020_test.world  KI_custom.world  ki_indoor.world
