<?xml version="1.0"?>
<package format="2">
  <name>scout_description</name>
  <version>0.0.0</version>
  <description>The scout_description package</description>

  <maintainer email="otsu@jpl.nasa.gov">Kyon Otsu</maintainer>
  <author email="andrea.tagliabue@jpl.nasa.gov">Andrea Tagliabue</author>
  <author email="xlei@jpl.nasa.gov">Xianmei Lei</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>realsense_description</exec_depend>
  <exec_depend>rotors_description</exec_depend>
  <!-- <exec_depend>subt_description</exec_depend> -->
  <exec_depend>velodyne_description</exec_depend>

</package>
