<?xml version="1.0"?>
<package format="2">
  <name>simulation_drone</name>
  <version>0.0.0</version>
  <description>ROS wrapper for PX4 sitl with gazebo</description>

  <maintainer email="hslee89@kaist.ac.kr">Hanseob Lee</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
